feat(app): POST /app/customers
